--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
+            android:name=".ui.ClockData"
+            android:exported="false" />
+        <activity
             android:name=".ui.Authenticate"
             android:exported="false"
             android:label="@string/app_name"
