--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,22 +8,29 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
-            android:name=".ui.ClockData"
+            android:name=".ui.Workouts.WorkoutCertain"
             android:exported="false" />
         <activity
-            android:name=".ui.Authenticate"
+            android:name=".ui.MainDashboards.MainDashboard"
+            android:exported="false" />
+        <activity
+            android:name=".ui.RightsVerif.ClockData"
+            android:exported="false" />
+        <activity
+            android:name=".ui.RightsVerif.Authenticate"
             android:exported="false"
             android:label="@string/app_name"
             android:theme="@style/AppTheme" />
         <activity
-            android:name=".ui.OnboardingActivity"
+            android:name=".ui.Onboarding.OnboardingActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainDashboards.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
